--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand" href="#page-top">S.E.R. Corujão</a>
-                <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" 
+                data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
@@ -36,11 +38,11 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead bg-primary text-white text-center">
-            <div class="container d-flex align-items-center flex-column">
+            <div class="container d-flex align-items-center align-content-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/corujao.png" alt="S.E.R. Corujão" />
+                <img class="masthead-avatar m-3" src="assets/img/corujao.png" alt="S.E.R. Corujão" />
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">S.E.R. Corujão</h1>
+                <h1 class="masthead-heading text-uppercase m-4">S.E.R. Corujão</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -48,8 +50,8 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Futebol - Corneta - Cerveja - Churrasco</p>
-                <p class="masthead-subheading font-weight-light mb-0">Não necessariamente nessa ordem</p>
+                <p class="masthead-subheading font-weight-light ">Futebol - Corneta - Cerveja - Churrasco</p>
+                <p class="masthead-subheading font-weight-light ">Não necessariamente nessa ordem</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -131,7 +133,7 @@
                 
                                     <!--Card image-->
                                     <div class="view overlay">
-                                        <img class="card-img-top img-fluid" src="assets/img/jogador3.png"
+                                        <img class="card-img-top img-fluid" src="assets/img/jogador2.png"
                                             alt="Jogadores">
                                             <div class="mask rgba-white-slight"></div>
                                     </div>
@@ -203,28 +205,14 @@
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer text-center">
-            <div class="container">
-                <div class="row">
+        <footer class="footer mx-auto text-center">
                     <!-- Footer Social Icons-->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
+                    <div class="col-lg-12 mb-5 mb-lg-0 ">
+                        <h4 class="text-uppercase mb-4 ">Links</h4>
+                        <a class="btn btn-outline-light btn-social mx-3" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-3" href="#!"><i class="fab fa-fw fa-instagram"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-3" href="#!"><i class="fab fa-fw fa-google"></i></a>
                     </div>
-                    <!-- Footer About Text-->
-                    <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">About Freelancer</h4>
-                        <p class="lead mb-0">
-                            Freelance is a free to use, MIT licensed Bootstrap theme created by
-                            <a href="http://startbootstrap.com">Start Bootstrap</a>
-                            .
-                        </p>
-                    </div>
-                </div>
-            </div>
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
