Página Jogadores com modelos, Início com foto do drone.

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
                 </div>
             </div>
         </nav>
-        <!-- Masthead-->
-        <header class="masthead bg-primary text-white text-center">
+        <!-- Masthead   bg-primary   -->
+<div class="image">
+        <header class="masthead text-white text-center">
             <div class="container d-flex align-items-center align-content-center flex-column">
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar m-3" src="assets/img/corujao.png" alt="S.E.R. Corujão" />
@@ -54,6 +55,7 @@
                 <p class="masthead-subheading font-weight-light ">Não necessariamente nessa ordem</p>
             </div>
         </header>
+</div>
         <!-- Portfolio Section-->
         <section class="page-section portfolio" id="menu">
             <div class="container">
