Ajustada imagem drone, tentativa de botão scrollToTop com erro (ajustar)

--- a/jogadores.html
+++ b/jogadores.html
@@ -385,15 +385,18 @@
             <!-- Footer Social Icons-->
             <div class="col-lg-12 mb-5 mb-lg-0 ">
                 <h4 class="text-uppercase mb-4 ">Links</h4>
-                <a class="btn btn-outline-light btn-social mx-3" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-                <a class="btn btn-outline-light btn-social mx-3" href="#!"><i class="fab fa-fw fa-instagram"></i></a>
-                <a class="btn btn-outline-light btn-social mx-3" href="#!"><i class="fab fa-fw fa-google"></i></a>
+                <a class="btn btn-outline-light btn-social mx-3" href="https://www.facebook.com/SERCORUJAO"><i class="fab fa-2x fa-facebook-f"></i></a>
+                <a class="btn btn-outline-light btn-social mx-3" href="https://www.instagram.com/corujaotdm/"><i class="fab fa-2x fa-instagram"></i></a>
             </div>
 </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
             <div class="container"><small> &copy; S.E.R. Corujão 2021</small></div>
         </div>
+
+        <button type="button" class="btn btn-floating btn-lg" id="btn-back-to-top">
+            <i class="fas fa-arrow-up">aeee</i>
+        </button>
 
 </body>
 </html>
